--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@
 }
 
 :root {
-    --background-color: #000;
-    --font-color: #fff;
-    --link-color: #3b73ff;
-    --accent-color: #777;
-    --dark-accent: #1e1e1e;
+    --background-color: #fff;
+    --font-color: #000;
+    --link-color: #0000ee;
+    --accent-color: #999;
+    --dark-accent: #eee;
     --normal-font: 1rem;
     --large-font: 1.75rem;
     --small-font: 0.75rem;
@@ -62,17 +62,17 @@ li {
     height: 40px;
     background: linear-gradient(
         180deg,
-        rgba(0, 0, 0, 1) 0%,
-        rgba(0, 0, 0, 0.9) 10%,
-        rgba(0, 0, 0, 0.8) 20%,
-        rgba(0, 0, 0, 0.7) 30%,
-        rgba(0, 0, 0, 0.6) 40%,
-        rgba(0, 0, 0, 0.5) 50%,
-        rgba(0, 0, 0, 0.4) 60%,
-        rgba(0, 0, 0, 0.3) 70%,
-        rgba(0, 0, 0, 0.2) 80%,
-        rgba(0, 0, 0, 0.1) 90%,
-        rgba(0, 0, 0, 0) 100%
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 0.9) 10%,
+        rgba(255, 255, 255, 0.8) 20%,
+        rgba(255, 255, 255, 0.7) 30%,
+        rgba(255, 255, 255, 0.6) 40%,
+        rgba(255, 255, 255, 0.5) 50%,
+        rgba(255, 255, 255, 0.4) 60%,
+        rgba(255, 255, 255, 0.3) 70%,
+        rgba(255, 255, 255, 0.2) 80%,
+        rgba(255, 255, 255, 0.1) 90%,
+        rgba(255, 255, 255, 0) 100%
     );
     z-index: 100000;
 }
@@ -89,7 +89,7 @@ li {
 .about-me {
     font-size: var(--normal-font);
     color: var(--font-color);
-    font-weight: 350;
+    font-weight: 400;
     margin-bottom: var(--padding-normal);
 }
 
@@ -110,7 +110,7 @@ li a {
 .item-title h2 {
     font-size: var(--normal-font);
     color: var(--font-color);
-    font-weight: 450;
+    font-weight: 500;
     width: 220px;
 }
 
@@ -184,8 +184,8 @@ li a {
     font-size: var(--small-font);
     position: relative;
     top: -1px;
-    font-weight: 400;
-    letter-spacing: 1px;
+    font-weight: 500;
+    letter-spacing: 0px;
 }
 
 .blog-post a {
@@ -250,7 +250,7 @@ li a {
     align-items: baseline;
     gap: 7px;
     font-size: var(--normal-font);
-    font-weight: 300;
+    font-weight: 400;
     padding: 0 0 0 5px;
     color: var(--font-color);
     margin-top: 30px;
