--- a/src/index.css
+++ b/src/index.css
@@ -249,6 +249,51 @@ svg {
   line-height: 26px;
 }
 
+.table-of-contents {
+  background-color: var(--code-background-color);
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: var(--large-spacing);
+  margin-top: 50px;
+}
+
+.table-of-contents h2 {
+  margin-bottom: 10px;
+}
+
+.table-heading {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.table-of-contents ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.table-of-contents li {
+  margin-bottom: 5px;
+}
+
+.table-of-contents a {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+.table-of-contents a:hover {
+  text-decoration: underline;
+}
+
+.katex {
+  font-size: 1.1em;
+}
+
+.katex-display {
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 1em 0;
+}
+
 /* Media Queries */
 @media (min-width: 750px) {
   :root {
