--- a/src/index.css
+++ b/src/index.css
@@ -236,12 +236,67 @@ svg {
   margin-top: var(--large-spacing);
 }
 
+.projects {
+  margin-top: var(--large-spacing);
+}
+
+.projects h2 {
+  margin-bottom: var(--normal-spacing);
+}
+
 .projects ul {
-  margin-top: var(--normal-spacing);
+  list-style-type: none;
+  padding: 0;
 }
 
 .projects li {
+  margin-bottom: var(--large-spacing);
+  padding: 20px;
+  background-color: var(--code-background-color);
+  border-radius: 5px;
+}
+
+.projects h3 {
   margin-bottom: 10px;
+  color: var(--heading-color);
+}
+
+.projects p {
+  margin-bottom: 15px;
+  font-size: 0.9em;
+}
+
+.project-links {
+  margin-bottom: 15px;
+}
+
+.project-link,
+.source-link {
+  display: inline-block;
+  margin-right: 15px;
+  padding: 5px 10px;
+  background-color: var(--link-color);
+  color: var(--background-color);
+  border-radius: 3px;
+  font-size: 0.8em;
+  text-decoration: none;
+  transition: opacity 0.2s ease-in-out;
+  font-family: monospace;
+}
+
+.project-tags {
+  margin-top: 10px;
+}
+
+.project-tags code {
+  display: inline-block;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  padding: 2px 5px;
+  font-size: var(--code-font-size);
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border-radius: 3px;
 }
 
 .list li {
@@ -383,7 +438,6 @@ svg {
 
   .socials a:hover,
   .blog a:hover,
-  .projects a:hover,
   .list a:hover {
     text-decoration: underline;
   }
@@ -396,5 +450,10 @@ svg {
 
   .tag-filter button:hover {
     background-color: var(--link-color);
+  }
+
+  .project-link:hover,
+  .source-link:hover {
+    transform: scale(1.05);
   }
 }
